# HeelonVault

./: .containerignore  .gitignore  ANALYSE_MIGRATION_EMAIL_2FA.md  CHANGELOG.en.md  CHANGELOG.md  CHANGELOG_CSV_IMPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HeelonVault.code-workspace  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_APPLICATION_COMPLETE.md  LICENSE  MIGRATION_GUIDE.md  MULTI_USER_GUIDE.md  PODMAN_GUIDE.md  QUICKSTART.fr.md  QUICKSTART.md  QUICKSTART_MIGRATION.md  README.en.md  README.md  RESUME_ACTIONS.md  SECURITY.fr.md  SECURITY.md  THIRD_PARTY_LICENSES.md  VERSION_0.1.0-beta.md  VERSION_SUMMARY.md  add_test_data.py  backup-prod-before-tests.sh  build-container.sh  clean_wordlist.py  fix-permissions.sh  heelonvault.desktop  install-core.sh  install-desktop.sh  install-rhel.sh  install.sh  (+23 more)
.github/workflows/: ci.yml  release.yml
browser_integration/: DEBUGGING_GUIDE.md  DEV_PROD_SOLUTION.md  PERMANENT_EXTENSION.md  PHASE_2_COMPLETE.md  PHASE_2_FIX.md  QUICK_COMMANDS.sh  QUICK_START.md  README.md  SIGNING_GUIDE.md  URL_FILTERING_BEHAVIOR.md  install_dev.sh  install_firefox_extension.sh  install_native_host.sh  install_prod.sh  native_host.py  native_host_wrapper.sh  native_host_wrapper_dev.sh  package_for_signing.sh  reload_extension.sh  sign_extension.sh  test_connection_firefox.sh  test_dev_communication.py  test_direct_communication.py  test_native_host.sh  test_url_matching.py
browser_integration/firefox_extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
browser_integration/firefox_extension_dev/: README.txt  background.js  manifest.json  popup.html  popup.js
container/: .containerignore  Containerfile  SITUATION.md  build-and-sign.sh
data/: README.fr.md  README.md
docs/: ARCHITECTURE.en.md  ARCHITECTURE.md  BRUTE_FORCE_PROTECTION.md  CHANGELOG_DATA_PROTECTION.md  CSV_IMPORT_GUIDE.md  DATA_PROTECTION.md  IMPLEMENTATION_STATUS.md  MIGRATION_GUIDE.md  MULTI_USER_GUIDE.md  OPEN_SOURCE_IMPROVEMENTS.md  PLAN_ADD_UPDATE_TRASH_SECRET.md  QUICKSTART.fr.md  QUICKSTART.md  QUICKSTART_MIGRATION.md  QUICK_IMPORT.md  RAPPORT_TESTS_SECURITE.md  README.md  REFACTORING_GUIDE.md  RESUME_ACTIONS.md  RESUME_PROTECTION_DONNEES.md  RUST_MIGRATION_PLAN.md  SECRET_MANAGER_EVOLUTION_SPEC.md  SECURITY.md  SECURITY_IMPROVEMENTS_CHANGELOG.md  SECURITY_MODEL.md  SECURITY_RECOMMENDATIONS.md  TRASH_SYSTEM.md  UPDATE_GUIDE.en.md  UPDATE_GUIDE.md  URL_FIELD_GUIDE.md  USER_GUIDE.en.md  USER_GUIDE.md  VERSION_0.2.0-beta.md  VERSION_0.3.0-beta.md  VERSION_0.4.0-beta.md  VERSION_SUMMARY.md
docs/charte/: CHARTE_GRAPHIQUE.md
docs/quality/: PHASE2_HANDOFF_2026-03-03.md
locales/: README.md  messages.pot
locales/en/: main.ftl
locales/fr/: main.ftl
logs/: pylint_report.txt  pylint_report_full.txt  pylint_report_phase1.txt  pylint_report_phase2_last_after.txt  pylint_report_phase2_last_before.txt  pylint_report_phase2_next_after.txt  pylint_report_phase2_next_before.txt  pylint_report_phase2_scope_after.txt  pylint_report_phase2_target_after.txt  pylint_report_phase2_target_before.txt  pylint_report_precommit.txt
my-gtk-app/: README.md  pyproject.toml  requirements.txt
my-gtk-app/scripts/: setup.sh
my-gtk-app/src/: main.py
my-gtk-app/src/core/: app.py
my-gtk-app/src/ui/dialogs/: base_dialog.py
my-gtk-app/src/ui/glade/: main_window.ui
my-gtk-app/src/ui/widgets/: custom_widget.py
resources/: gresources.xml  style.css
rust/: Cargo.toml  README.md  build.rs
rust/resources/: gresources.xml  style.css
rust/src/: main.rs
rust/src/models/: mod.rs  password_entry.rs  secret_item.rs  user.rs  vault.rs
rust/src/repositories/: secret_repository.rs  user_repository.rs  vault_repository.rs
rust/src/services/: auth_policy_service.rs  auth_service.rs  backup_service.rs  import_service.rs  login_history_service.rs  mod.rs  password_service.rs  secret_service.rs  totp_service.rs  user_service.rs  vault_service.rs
rust/src/ui/: messages.rs  mod.rs
rust/src/ui/dialogs/: add_edit_dialog.rs  login_dialog.rs  mod.rs  profile_dialog.rs  trash_dialog.rs
rust/src/ui/widgets/: mod.rs  password_strength_bar.rs  secret_card.rs
rust/src/ui/windows/: main_window.rs
rust/tests/: security_auth.rs
scripts/: README.fr.md  README.md  backup-prod-before-tests.sh  collect-dlls.sh  create-macos-bundle.sh  fix-permissions.sh  generate-sbom.sh  install-ubuntu.sh  install.sh  migrate_to_email_2fa.py  migrate_to_multivault.py  remove-rhel.sh  remove.sh  run-security-tests.sh  test-app.sh
src/: errors.rs  i18n.py  i18n.rs  lib.rs  main.rs  version.py
src/app/: application.py
src/config/: environment.py  logging_config.py
src/models/: __init__.py  audit_log.rs  category.py  mod.rs  password_entry.py  secret_item.py  secret_item.rs  secret_types.py  user.py  user_info.py  vault.py
src/repositories/: audit_log_repository.rs  mod.rs  password_repository.py  secret_repository.py  secret_repository.rs  team_repository.rs  user_repository.rs  vault_repository.py  vault_repository.rs
src/resources/: style.css
src/services/: __init__.py  access_control.rs  admin_service.rs  audit_log_service.rs  audit_report_service.rs  audit_service.rs  mod.rs  (+28 more)
tests/: CHANGELOG_SECURITY_FIX.md  README.md  SECURITY_TESTING.md  __init__.py  backup_security_integration.rs  check_structure.py  login_history_integration.rs  multiuser_rbac_integration.rs  run_all_tests.sh  secret_multivault_edit_integration.rs  security_auth.rs  security_crypto.rs  smoke-test.sh  test-data-protection.sh  test-import-csv.sh  test-logging.sh  test-version.sh  test_csv_parsing.py  test_main_window_security_regression.py  test_main_window_ssh_ui.py  test_migrate_v1_to_v2.py  test_no_deprecation.sh  test_password_strength_service.py  test_secret_repository.py  test_secret_service.py  test_security_audit_service.py  test_security_dashboard_window.py  test_ssh_metadata_parsing.py  test_vault_repository.py  test_vault_service.py  totp_activation_integration.rs  twofa_messages_integration.rs  user_language_persistence_integration.rs
(+65 files in other folders)
