[tool.poetry]
name = "my-gtk-app"
version = "0.1.0"
description = "A GTK application built with Python."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gtk = "^3.24"
pygobject = "^3.40"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"