[package]
name = "heelonvault-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "HeelonVault Rust migration skeleton (security-first architecture)"
repository = "<private>"

[features]
default = []

[dependencies]
gio = "0.20"
anyhow = "1.0"
aes-gcm = "0.10"
argon2 = "0.5"
getrandom = "0.3"
gtk4 = "0.9"
libadwaita = { version = "0.7", features = ["v1_2"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "macros", "migrate", "runtime-tokio-rustls", "time", "uuid"] }
thiserror = "2.0"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync"] }
totp-rs = "5.6"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
uuid = { version = "1.16", features = ["serde", "v4"] }
zeroize = "1.8"
zxcvbn = "2.2"
chrono = { version = "0.4", features = ["std"] }
bip39 = { version = "2.1", features = ["rand"] }
base64 = "0.22"
csv = "1.3"

[build-dependencies]
glib-build-tools = "0.20"

[dev-dependencies]
criterion = "0.5"
proptest = "1.6"
rstest = "0.24"
